[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/bowl.jpg" type="Texture" id=2]
[ext_resource path="res://scenes/enemies/enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/spoon.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/kill_zone.tscn" type="PackedScene" id=5]
[ext_resource path="res://theme/theme.tres" type="Theme" id=6]
[ext_resource path="res://scenes/battle.gd" type="Script" id=7]
[ext_resource path="res://theme/comic.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://sounds/victory.mp3" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 4
font_data = ExtResource( 8 )

[node name="Battle" type="Node2D"]
script = ExtResource( 7 )

[node name="Bowl" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spoon" parent="." instance=ExtResource( 4 )]
position = Vector2( -3000, -1500 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -393.675, -271.446 )

[node name="Enemy2" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 249.222, -277.795 )

[node name="Enemy3" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 273.033, -31.748 )

[node name="Enemy4" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 101.594, -155.565 )

[node name="Enemy5" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -96.8314, -184.139 )

[node name="Enemy6" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -228.586, -42.8598 )

[node name="Enemy7" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -441.297, -74.6078 )

[node name="Enemy8" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -366.69, 114.293 )

[node name="Enemy9" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -211.124, 180.964 )

[node name="Enemy10" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 4.76215, 190.488 )

[node name="Enemy11" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 195.25, 185.726 )

[node name="Enemy12" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 330.179, 114.293 )

[node name="Enemy13" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 401.612, -31.748 )

[node name="Enemy14" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 590.513, -93.6566 )

[node name="Enemy15" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 412.724, -153.978 )

[node name="Enemy16" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -269.858, -225.411 )

[node name="Enemy17" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -71.4332, -280.97 )

[node name="Enemy18" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 122.23, -250.809 )

[node name="Enemy19" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 166.677, 77.7827 )

[node name="Enemy20" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -107.943, 82.5449 )

[node name="Enemy21" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -414.312, 14.2867 )

[node name="Enemy22" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -604.8, -4.76218 )

[node name="Enemy23" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -333.354, -138.104 )

[node name="Enemy24" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -541.304, -150.803 )

[node name="Enemy25" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 114.293, 257.159 )

[node name="Boundary" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Boundary"]
polygon = PoolVector2Array( -4.71307, 338.515, 148.022, 332.858, 338.941, 301.745, 505.818, 232.449, 607.641, 167.395, 661.381, 102.341, 712.293, 18.9026, 716.536, -77.2639, 678.352, -152.217, 610.47, -229.999, 528.445, -285.153, 361.568, -357.278, 222.975, -394.048, 73.0687, -411.018, -57.0389, -413.847, -185.732, -394.048, -341.296, -362.935, -498.273, -296.467, -580.298, -246.97, -645.352, -167.774, -679.293, -108.377, -694.849, 1.93198, -642.523, 100.927, -523.729, 206.993, -427.563, 260.733, -235.23, 315.887, -40.0684, 338.515, -39.4363, 404.67, -658.237, 392.684, -775.105, 9.117, -713.674, -238.104, -616.284, -467.345, -274.67, -518.287, 246.74, -506.301, 610.829, -474.836, 753.168, -307.026, 801.114, -76.2865, 853.555, 269.823, 574.87, 358.223, 237.751, 436.135, -4.97498, 407.667 )

[node name="KillLeft" parent="." instance=ExtResource( 5 )]
position = Vector2( -2449.29, -1547.18 )

[node name="KillRight" parent="." instance=ExtResource( 5 )]
position = Vector2( 2449.29, -1547.18 )

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="GameOver" type="PopupPanel" parent="UI"]
margin_right = 8.0
margin_bottom = 8.0
theme = ExtResource( 6 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOver"]
margin_left = 12.0
margin_top = 12.0
margin_right = 162.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/GameOver/VBoxContainer"]
margin_right = 150.0
margin_bottom = 34.0
text = "Game over!"
align = 1

[node name="TryAgain" type="Button" parent="UI/GameOver/VBoxContainer"]
margin_top = 38.0
margin_right = 150.0
margin_bottom = 96.0
text = "Try Again"

[node name="MainMenu" type="Button" parent="UI/GameOver/VBoxContainer"]
margin_top = 100.0
margin_right = 150.0
margin_bottom = 158.0
text = "Main Menu "

[node name="Left" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -130.5
margin_right = 130.5
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.133333, 0.694118, 0.298039, 1 )
custom_colors/font_outline_modulate = Color( 0.709804, 0.901961, 0.113725, 1 )
text = "Enemies left: 00"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Over" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = 10.0

[connection signal="enemy_killed" from="KillLeft" to="." method="_on_enemy_killed"]
[connection signal="player_killed" from="KillLeft" to="." method="_on_player_killed"]
[connection signal="enemy_killed" from="KillRight" to="." method="_on_enemy_killed"]
[connection signal="player_killed" from="KillRight" to="." method="_on_player_killed"]
